--- a/pkg/rules/r1002-kernel-module-load/kernel-module-load.yaml
+++ b/pkg/rules/r1002-kernel-module-load/kernel-module-load.yaml
@@ -7,23 +7,23 @@ metadata:
     app: kubescape
 spec:
   rules:
-  - name: "Process tries to load a kernel module"
-    enabled: true
-    id: "R1002"
-    description: "Detecting Kernel Module Load."
-    expressions:
-      message: "'Kernel module load syscall (init_module) was called'"
-      unique_id: "'init_module'"
-      rule_expression:
-        - event_type: "syscall"
-          expression: >
-            'init_module' in event.syscalls ||
-            'finit_module' in event.syscalls
-    profile_dependency: 2
-    severity: 10
-    support_policy: false
-    tags:
-      - "syscall"
-      - "kernel"
-      - "module"
-      - "load"
+    - name: "Process tries to load a kernel module"
+      enabled: true
+      id: "R1002"
+      description: "Detecting Kernel Module Load."
+      expressions:
+        message: "'Kernel module load syscall (init_module) was called'"
+        uniqueId: "'init_module'"
+        ruleExpression:
+          - eventType: "syscall"
+            expression: >
+              'init_module' in event.syscalls ||
+              'finit_module' in event.syscalls
+      profileDependency: 2
+      severity: 10
+      supportPolicy: false
+      tags:
+        - "syscall"
+        - "kernel"
+        - "module"
+        - "load"
