--- a/pkg/rules/r0001-unexpected-process-launched/unexpected-process-launched.yaml
+++ b/pkg/rules/r0001-unexpected-process-launched/unexpected-process-launched.yaml
@@ -7,21 +7,21 @@ metadata:
     app: kubescape
 spec:
   rules:
-  - name: "Unexpected process launched"
-    enabled: true
-    id: "R0001"
-    description: "Detects unexpected process launches that are not in the baseline"
-    expressions:
-      message: "'Unexpected process launched: ' + event.comm + ' with PID ' + string(event.pid)"
-      unique_id: "event.comm + '_' + event.exepath"
-      rule_expression:
-        - event_type: "exec"
-          expression: "!ap.was_executed(event.containerId, parse.get_exec_path(event.args, event.comm))"
-    profile_dependency: 0
-    severity: 1
-    support_policy: false
-    tags:
-      - "anomaly"
-      - "process"
-      - "exec"
-      - "applicationprofile"
+    - name: "Unexpected process launched"
+      enabled: true
+      id: "R0001"
+      description: "Detects unexpected process launches that are not in the baseline"
+      expressions:
+        message: "'Unexpected process launched: ' + event.comm + ' with PID ' + string(event.pid)"
+        uniqueId: "event.comm + '_' + event.exepath"
+        ruleExpression:
+          - eventType: "exec"
+            expression: "!ap.was_executed(event.containerId, parse.get_exec_path(event.args, event.comm))"
+      profileDependency: 0
+      severity: 1
+      supportPolicy: false
+      tags:
+        - "anomaly"
+        - "process"
+        - "exec"
+        - "applicationprofile"
