--- a/pkg/rules/r0006-unexpected-service-account-token-access/unexpected-service-account-token-access.yaml
+++ b/pkg/rules/r0006-unexpected-service-account-token-access/unexpected-service-account-token-access.yaml
@@ -7,28 +7,28 @@ metadata:
     app: kubescape
 spec:
   rules:
-  - name: "Unexpected service account token access"
-    enabled: true
-    id: "R0006"
-    description: "Detecting unexpected access to service account token."
-    expressions:
-      message: "'Unexpected access to service account token: ' + event.path + ' with flags: ' + event.flags.join(',')"
-      unique_id: "event.comm"
-      rule_expression:
-        - event_type: "open"
-          expression: >
-            ((event.path.startsWith('/run/secrets/kubernetes.io/serviceaccount') && event.path.endsWith('/token')) || 
-             (event.path.startsWith('/var/run/secrets/kubernetes.io/serviceaccount') && event.path.endsWith('/token')) ||
-             (event.path.startsWith('/run/secrets/eks.amazonaws.com/serviceaccount') && event.path.endsWith('/token')) ||
-             (event.path.startsWith('/var/run/secrets/eks.amazonaws.com/serviceaccount') && event.path.endsWith('/token'))) &&
-            !ap.was_path_opened_with_prefix(event.containerId, '/run/secrets/kubernetes.io/serviceaccount') &&
-            !ap.was_path_opened_with_prefix(event.containerId, '/var/run/secrets/kubernetes.io/serviceaccount') &&
-            !ap.was_path_opened_with_prefix(event.containerId, '/run/secrets/eks.amazonaws.com/serviceaccount') &&
-            !ap.was_path_opened_with_prefix(event.containerId, '/var/run/secrets/eks.amazonaws.com/serviceaccount')
-    profile_dependency: 1
-    severity: 5
-    support_policy: false
-    tags:
-      - "anomaly"
-      - "serviceaccount"
-      - "applicationprofile"
+    - name: "Unexpected service account token access"
+      enabled: true
+      id: "R0006"
+      description: "Detecting unexpected access to service account token."
+      expressions:
+        message: "'Unexpected access to service account token: ' + event.path + ' with flags: ' + event.flags.join(',')"
+        uniqueId: "event.comm"
+        ruleExpression:
+          - eventType: "open"
+            expression: >
+              ((event.path.startsWith('/run/secrets/kubernetes.io/serviceaccount') && event.path.endsWith('/token')) || 
+               (event.path.startsWith('/var/run/secrets/kubernetes.io/serviceaccount') && event.path.endsWith('/token')) ||
+               (event.path.startsWith('/run/secrets/eks.amazonaws.com/serviceaccount') && event.path.endsWith('/token')) ||
+               (event.path.startsWith('/var/run/secrets/eks.amazonaws.com/serviceaccount') && event.path.endsWith('/token'))) &&
+              !ap.was_path_opened_with_prefix(event.containerId, '/run/secrets/kubernetes.io/serviceaccount') &&
+              !ap.was_path_opened_with_prefix(event.containerId, '/var/run/secrets/kubernetes.io/serviceaccount') &&
+              !ap.was_path_opened_with_prefix(event.containerId, '/run/secrets/eks.amazonaws.com/serviceaccount') &&
+              !ap.was_path_opened_with_prefix(event.containerId, '/var/run/secrets/eks.amazonaws.com/serviceaccount')
+      profileDependency: 1
+      severity: 5
+      supportPolicy: false
+      tags:
+        - "anomaly"
+        - "serviceaccount"
+        - "applicationprofile"
