--- a/pkg/rules/r0007-kubernetes-client-executed/kubernetes-client-executed.yaml
+++ b/pkg/rules/r0007-kubernetes-client-executed/kubernetes-client-executed.yaml
@@ -7,23 +7,23 @@ metadata:
     app: kubescape
 spec:
   rules:
-  - name: "Workload uses Kubernetes API unexpectedly"
-    enabled: true
-    id: "R0007"
-    description: "Detecting execution of kubernetes client"
-    expressions:
-      message: "event_type == 'exec' ? 'Kubernetes client (' + event.comm + ') was executed with PID ' + string(event.pid) : 'Network connection to Kubernetes API server from container ' + event.containerName"
-      unique_id: "event_type == 'exec' ? 'exec_' + event.comm : 'network_' + event.dstAddr"
-      rule_expression:
-        - event_type: "exec"
-          expression: "(event.comm == 'kubectl' || event.exepath.endsWith('/kubectl')) && !ap.was_executed(event.containerId, parse.get_exec_path(event.args, event.comm))"
-        - event_type: "network"
-          expression: "event.pktType == 'OUTGOING' && k8s.is_api_server_address(event.dstAddr) && !nn.was_address_in_egress(event.containerId, event.dstAddr)"
-    profile_dependency: 0
-    severity: 5 # Medium
-    support_policy: false
-    tags:
-      - "exec"
-      - "network"
-      - "anomaly"
-      - "applicationprofile"
+    - name: "Workload uses Kubernetes API unexpectedly"
+      enabled: true
+      id: "R0007"
+      description: "Detecting execution of kubernetes client"
+      expressions:
+        message: "eventType == 'exec' ? 'Kubernetes client (' + event.comm + ') was executed with PID ' + string(event.pid) : 'Network connection to Kubernetes API server from container ' + event.containerName"
+        uniqueId: "eventType == 'exec' ? 'exec_' + event.comm : 'network_' + event.dstAddr"
+        ruleExpression:
+          - eventType: "exec"
+            expression: "(event.comm == 'kubectl' || event.exepath.endsWith('/kubectl')) && !ap.was_executed(event.containerId, parse.get_exec_path(event.args, event.comm))"
+          - eventType: "network"
+            expression: "event.pktType == 'OUTGOING' && k8s.is_api_server_address(event.dstAddr) && !nn.was_address_in_egress(event.containerId, event.dstAddr)"
+      profileDependency: 0
+      severity: 5 # Medium
+      supportPolicy: false
+      tags:
+        - "exec"
+        - "network"
+        - "anomaly"
+        - "applicationprofile"
