--- a/pkg/rules/r0009-ebpf-program-load/ebpf-program-load.yaml
+++ b/pkg/rules/r0009-ebpf-program-load/ebpf-program-load.yaml
@@ -7,20 +7,20 @@ metadata:
     app: kubescape
 spec:
   rules:
-  - name: "eBPF Program Load"
-    enabled: true
-    id: "R0009"
-    description: "Detecting eBPF program load."
-    expressions:
-      message: "'bpf system call executed in ' + event.containerName"
-      unique_id: "event.comm + '_bpf'"
-      rule_expression:
-        - event_type: "syscall"
-          expression: "'bpf' in event.syscalls && !ap.was_syscall_used(event.containerId, 'bpf')"
-    profile_dependency: 1
-    severity: 5
-    support_policy: false
-    tags:
-      - "syscall"
-      - "ebpf"
-      - "applicationprofile"
+    - name: "eBPF Program Load"
+      enabled: true
+      id: "R0009"
+      description: "Detecting eBPF program load."
+      expressions:
+        message: "'bpf system call executed in ' + event.containerName"
+        uniqueId: "event.comm + '_bpf'"
+        ruleExpression:
+          - eventType: "syscall"
+            expression: "'bpf' in event.syscalls && !ap.was_syscall_used(event.containerId, 'bpf')"
+      profileDependency: 1
+      severity: 5
+      supportPolicy: false
+      tags:
+        - "syscall"
+        - "ebpf"
+        - "applicationprofile"
