--- a/pkg/rules/r1000-exec-from-malicious-source/exec-from-malicious-source.yaml
+++ b/pkg/rules/r1000-exec-from-malicious-source/exec-from-malicious-source.yaml
@@ -7,23 +7,23 @@ metadata:
     app: kubescape
 spec:
   rules:
-  - name: "Process executed from malicious source"
-    enabled: true
-    id: "R1000"
-    description: "Detecting exec calls that are from malicious source like: /dev/shm"
-    expressions:
-      message: "'Execution from malicious source: ' + event.exepath + ' in directory ' + event.cwd"
-      unique_id: "event.comm + '_' + event.exepath + '_' + event.pcomm"
-      rule_expression:
-        - event_type: "exec"
-          expression: >
-            (event.exepath == '/dev/shm' || event.exepath.startsWith('/dev/shm/')) ||
-            (event.cwd == '/dev/shm' || event.cwd.startsWith('/dev/shm/') || 
-            (parse.get_exec_path(event.args, event.comm).startsWith('/dev/shm/')))
-    profile_dependency: 2
-    severity: 8
-    support_policy: false
-    tags:
-      - "exec"
-      - "signature"
-      - "malicious"
+    - name: "Process executed from malicious source"
+      enabled: true
+      id: "R1000"
+      description: "Detecting exec calls that are from malicious source like: /dev/shm"
+      expressions:
+        message: "'Execution from malicious source: ' + event.exepath + ' in directory ' + event.cwd"
+        uniqueId: "event.comm + '_' + event.exepath + '_' + event.pcomm"
+        ruleExpression:
+          - eventType: "exec"
+            expression: >
+              (event.exepath == '/dev/shm' || event.exepath.startsWith('/dev/shm/')) ||
+              (event.cwd == '/dev/shm' || event.cwd.startsWith('/dev/shm/') || 
+              (parse.get_exec_path(event.args, event.comm).startsWith('/dev/shm/')))
+      profileDependency: 2
+      severity: 8
+      supportPolicy: false
+      tags:
+        - "exec"
+        - "signature"
+        - "malicious"
