--- a/pkg/rules/r1004-exec-from-mount/exec-from-mount.yaml
+++ b/pkg/rules/r1004-exec-from-mount/exec-from-mount.yaml
@@ -7,20 +7,20 @@ metadata:
     app: kubescape
 spec:
   rules:
-  - name: "Process executed from mount"
-    enabled: true
-    id: "R1004"
-    description: "Detecting exec calls from mounted paths."
-    expressions:
-      message: "'Process (' + event.comm + ') was executed from a mounted path'"
-      unique_id: "event.comm + '_' + event.exepath + '_'"
-      rule_expression:
-        - event_type: "exec"
-          expression: "!ap.was_executed(event.containerId, parse.get_exec_path(event.args, event.comm)) && k8s.get_container_mount_paths(event.namespace, event.podName, event.containerName).exists(mount, event.exepath.startsWith(mount) || parse.get_exec_path(event.args, event.comm).startsWith(mount))"
-    profile_dependency: 1
-    severity: 5
-    support_policy: false
-    tags:
-      - "exec"
-      - "mount"
-      - "applicationprofile"
+    - name: "Process executed from mount"
+      enabled: true
+      id: "R1004"
+      description: "Detecting exec calls from mounted paths."
+      expressions:
+        message: "'Process (' + event.comm + ') was executed from a mounted path'"
+        uniqueId: "event.comm + '_' + event.exepath + '_'"
+        ruleExpression:
+          - eventType: "exec"
+            expression: "!ap.was_executed(event.containerId, parse.get_exec_path(event.args, event.comm)) && k8s.get_container_mount_paths(event.namespace, event.podName, event.containerName).exists(mount, event.exepath.startsWith(mount) || parse.get_exec_path(event.args, event.comm).startsWith(mount))"
+      profileDependency: 1
+      severity: 5
+      supportPolicy: false
+      tags:
+        - "exec"
+        - "mount"
+        - "applicationprofile"
