--- a/pkg/rules/r1007-xmr-crypto-mining/xmr-crypto-mining.yaml
+++ b/pkg/rules/r1007-xmr-crypto-mining/xmr-crypto-mining.yaml
@@ -7,20 +7,20 @@ metadata:
     app: kubescape
 spec:
   rules:
-  - name: "Crypto miner launched"
-    enabled: true
-    id: "R1007"
-    description: "Detecting XMR Crypto Miners by randomx algorithm usage."
-    expressions:
-      message: "'XMR Crypto Miner process: (' + event.exepath + ') executed'"
-      unique_id: "event.exepath + '_' + event.comm"
-      rule_expression:
-        - event_type: "randomx"
-          expression: "true"
-    profile_dependency: 2
-    severity: 10
-    support_policy: false
-    tags:
-      - "crypto"
-      - "miners"
-      - "malicious"
+    - name: "Crypto miner launched"
+      enabled: true
+      id: "R1007"
+      description: "Detecting XMR Crypto Miners by randomx algorithm usage."
+      expressions:
+        message: "'XMR Crypto Miner process: (' + event.exepath + ') executed'"
+        uniqueId: "event.exepath + '_' + event.comm"
+        ruleExpression:
+          - eventType: "randomx"
+            expression: "true"
+      profileDependency: 2
+      severity: 10
+      supportPolicy: false
+      tags:
+        - "crypto"
+        - "miners"
+        - "malicious"
