--- a/pkg/rules/r1009-crypto-mining-related-port/crypto-mining-related-port.yaml
+++ b/pkg/rules/r1009-crypto-mining-related-port/crypto-mining-related-port.yaml
@@ -7,22 +7,22 @@ metadata:
     app: kubescape
 spec:
   rules:
-  - name: "Crypto Mining Related Port Communication"
-    enabled: true
-    id: "R1009"
-    description: "Detecting Crypto Miners by suspicious port usage."
-    expressions:
-      message: "'Detected crypto mining related port communication on port ' + string(event.dstPort) + ' to ' + event.dstAddr + ' with protocol ' + event.proto"
-      unique_id: "event.comm + '_' + string(event.dstPort)"
-      rule_expression:
-        - event_type: "network"
-          expression: "event.proto == 'TCP' && event.pktType == 'OUTGOING' && event.dstPort in [3333, 45700] && !nn.was_address_in_egress(event.containerId, event.dstAddr)"
-    profile_dependency: 1
-    severity: 3
-    support_policy: false
-    tags:
-      - "network"
-      - "crypto"
-      - "miners"
-      - "malicious"
-      - "networkprofile"
+    - name: "Crypto Mining Related Port Communication"
+      enabled: true
+      id: "R1009"
+      description: "Detecting Crypto Miners by suspicious port usage."
+      expressions:
+        message: "'Detected crypto mining related port communication on port ' + string(event.dstPort) + ' to ' + event.dstAddr + ' with protocol ' + event.proto"
+        uniqueId: "event.comm + '_' + string(event.dstPort)"
+        ruleExpression:
+          - eventType: "network"
+            expression: "event.proto == 'TCP' && event.pktType == 'OUTGOING' && event.dstPort in [3333, 45700] && !nn.was_address_in_egress(event.containerId, event.dstAddr)"
+      profileDependency: 1
+      severity: 3
+      supportPolicy: false
+      tags:
+        - "network"
+        - "crypto"
+        - "miners"
+        - "malicious"
+        - "networkprofile"
