--- a/pkg/rules/r1010-symlink-created-over-sensitive-file/symlink-created-over-sensitive-file.yaml
+++ b/pkg/rules/r1010-symlink-created-over-sensitive-file/symlink-created-over-sensitive-file.yaml
@@ -7,20 +7,20 @@ metadata:
     app: kubescape
 spec:
   rules:
-  - name: "Soft link created over sensitive file"
-    enabled: true
-    id: "R1010"
-    description: "Detects symlink creation over sensitive files"
-    expressions:
-      message: "'Symlink created over sensitive file: ' + event.oldPath + ' -> ' + event.newPath"
-      unique_id: "event.comm + '_' + event.oldPath"
-      rule_expression:
-        - event_type: "symlink"
-          expression: "(event.oldPath.startsWith('/etc/shadow') || event.oldPath.startsWith('/etc/sudoers')) && !ap.was_path_opened(event.containerId, event.oldPath)"
-    profile_dependency: 1
-    severity: 5
-    support_policy: true
-    tags:
-      - "anomaly"
-      - "symlink"
-      - "applicationprofile"
+    - name: "Soft link created over sensitive file"
+      enabled: true
+      id: "R1010"
+      description: "Detects symlink creation over sensitive files"
+      expressions:
+        message: "'Symlink created over sensitive file: ' + event.oldPath + ' -> ' + event.newPath"
+        uniqueId: "event.comm + '_' + event.oldPath"
+        ruleExpression:
+          - eventType: "symlink"
+            expression: "(event.oldPath.startsWith('/etc/shadow') || event.oldPath.startsWith('/etc/sudoers')) && !ap.was_path_opened(event.containerId, event.oldPath)"
+      profileDependency: 1
+      severity: 5
+      supportPolicy: true
+      tags:
+        - "anomaly"
+        - "symlink"
+        - "applicationprofile"
