--- a/pkg/rules/r1030-unexpected-io_uring-operation/unexpected-io_uring-operation.yaml
+++ b/pkg/rules/r1030-unexpected-io_uring-operation/unexpected-io_uring-operation.yaml
@@ -7,20 +7,20 @@ metadata:
     app: kubescape
 spec:
   rules:
-  - name: "Unexpected io_uring Operation Detected"
-    enabled: true
-    id: "R1030"
-    description: "Detects io_uring operations that were not recorded during the initial observation period, indicating potential unauthorized activity."
-    expressions:
-      message: "'Unexpected io_uring operation detected: (opcode=' + string(event.opcode) + ') flags=0x' + (has(event.flagsRaw) ? string(event.flagsRaw) : '0') + ' in ' + event.comm + '.'"
-      unique_id: "string(event.opcode) + '_' + event.comm"
-      rule_expression:
-        - event_type: "iouring"
-          expression: "true"
-    profile_dependency: 0
-    severity: 5
-    support_policy: true
-    tags:
-      - "syscalls"
-      - "io_uring"
-      - "applicationprofile"
+    - name: "Unexpected io_uring Operation Detected"
+      enabled: true
+      id: "R1030"
+      description: "Detects io_uring operations that were not recorded during the initial observation period, indicating potential unauthorized activity."
+      expressions:
+        message: "'Unexpected io_uring operation detected: (opcode=' + string(event.opcode) + ') flags=0x' + (has(event.flagsRaw) ? string(event.flagsRaw) : '0') + ' in ' + event.comm + '.'"
+        uniqueId: "string(event.opcode) + '_' + event.comm"
+        ruleExpression:
+          - eventType: "iouring"
+            expression: "true"
+      profileDependency: 0
+      severity: 5
+      supportPolicy: true
+      tags:
+        - "syscalls"
+        - "io_uring"
+        - "applicationprofile"
