--- a/pkg/rules/r1002-kernel-module-load/kernel-module-load.yaml
+++ b/pkg/rules/r1002-kernel-module-load/kernel-module-load.yaml
@@ -12,13 +12,13 @@ spec:
       id: "R1002"
       description: "Detecting Kernel Module Load."
       expressions:
-        message: "'Kernel module load syscall (init_module) was called'"
-        uniqueId: "'init_module'"
+        message: "'Kernel module load syscall (' + event.syscallName + ') was called'"
+        uniqueId: "event.syscallName"
         ruleExpression:
           - eventType: "syscall"
             expression: >
-              'init_module' in event.syscalls ||
-              'finit_module' in event.syscalls
+              event.syscallName == 'init_module' ||
+              event.syscallName == 'finit_module'
       profileDependency: 2
       severity: 10
       supportPolicy: false
