--- a/rules-crd.yaml
+++ b/rules-crd.yaml
@@ -68,11 +68,11 @@ spec:
         id: "R0003"
         description: "Detects unexpected system calls that are not whitelisted by application profile"
         expressions:
-          message: "'Unexpected system call detected: todo with PID ' + string(event.pid)"
-          uniqueId: "'todo'"
+          message: "'Unexpected system call detected: ' + event.syscallName + ' with PID ' + string(event.pid)"
+          uniqueId: "event.syscallName"
           ruleExpression:
             - eventType: "syscall"
-              expression: "!ap.were_syscalls_used(event.containerId, event.syscalls)"
+              expression: "!ap.was_syscall_used(event.containerId, event.syscallName)"
         profileDependency: 0
         severity: 1
         supportPolicy: false
@@ -186,10 +186,10 @@ spec:
         description: "Detecting eBPF program load."
         expressions:
           message: "'bpf system call executed in ' + event.containerName"
-          uniqueId: "event.comm + '_bpf'"
+          uniqueId: "event.comm + '_' + event.syscallName"
           ruleExpression:
             - eventType: "syscall"
-              expression: "'bpf' in event.syscalls && !ap.was_syscall_used(event.containerId, 'bpf')"
+              expression: "event.syscallName == 'bpf' && !ap.was_syscall_used(event.containerId, event.syscallName)"
         profileDependency: 1
         severity: 5
         supportPolicy: false
@@ -279,13 +279,13 @@ spec:
         id: "R1002"
         description: "Detecting Kernel Module Load."
         expressions:
-          message: "'Kernel module load syscall (init_module) was called'"
-          uniqueId: "'init_module'"
+          message: "'Kernel module load syscall (' + event.syscallName + ') was called'"
+          uniqueId: "event.syscallName"
           ruleExpression:
             - eventType: "syscall"
               expression: >
-                'init_module' in event.syscalls ||
-                'finit_module' in event.syscalls
+                event.syscallName == 'init_module' ||
+                event.syscallName == 'finit_module'
         profileDependency: 2
         severity: 10
         supportPolicy: false
@@ -352,11 +352,11 @@ spec:
         id: "R1006"
         description: "Detecting Unshare System Call usage, which can be used to escape container."
         expressions:
-          message: "'Unshare system call detected: unshare with PID ' + string(event.pid)"
-          uniqueId: "'unshare'"
+          message: "'Unshare system call detected: ' + event.syscallName + ' with PID ' + string(event.pid)"
+          uniqueId: "event.syscallName"
           ruleExpression:
             - eventType: "syscall"
-              expression: "'unshare' in event.syscalls && !ap.was_syscall_used(event.containerId, 'unshare')"
+              expression: "event.syscallName == 'unshare' && !ap.was_syscall_used(event.containerId, event.syscallName)"
         profileDependency: 2
         severity: 5
         supportPolicy: false
