--- a/pkg/rules/r0009-ebpf-program-load/ebpf-program-load.yaml
+++ b/pkg/rules/r0009-ebpf-program-load/ebpf-program-load.yaml
@@ -12,15 +12,15 @@ spec:
       id: "R0009"
       description: "Detecting eBPF program load."
       expressions:
-        message: "'bpf system call executed in ' + event.containerName"
-        uniqueId: "event.comm + '_' + event.syscallName"
+        message: "'bpf program load system call (bpf) was called by process (' + event.comm + ') with command (BPF_PROG_LOAD)'"
+        uniqueId: "event.comm + '_' + 'bpf' + '_' + string(event.cmd)"
         ruleExpression:
-          - eventType: "syscall"
-            expression: "event.syscallName == 'bpf' && !ap.was_syscall_used(event.containerId, event.syscallName)"
+          - eventType: "bpf"
+            expression: "event.cmd == uint(5) && !ap.was_syscall_used(event.containerId, 'bpf')"
       profileDependency: 1
       severity: 5
       supportPolicy: false
       tags:
-        - "syscall"
+        - "bpf"
         - "ebpf"
         - "applicationprofile"
