--- a/pkg/rules/r1006-unshare-syscall/unshare-syscall.yaml
+++ b/pkg/rules/r1006-unshare-syscall/unshare-syscall.yaml
@@ -12,16 +12,16 @@ spec:
       id: "R1006"
       description: "Detecting Unshare System Call usage, which can be used to escape container."
       expressions:
-        message: "'Unshare system call detected: ' + event.syscallName + ' with PID ' + string(event.pid)"
-        uniqueId: "event.syscallName"
+        message: "'Unshare system call (unshare) was called by process (' + event.comm + ')'"
+        uniqueId: "event.comm + '_' + 'unshare'"
         ruleExpression:
-          - eventType: "syscall"
-            expression: "event.syscallName == 'unshare' && !ap.was_syscall_used(event.containerId, event.syscallName)"
+          - eventType: "unshare"
+            expression: "!ap.was_syscall_used(event.containerId, 'unshare')"
       profileDependency: 2
       severity: 5
       supportPolicy: false
       tags:
-        - "syscall"
+        - "unshare"
         - "escape"
         - "unshare"
         - "anomaly"
