--- a/pkg/rules/r0004-unexpected-capability-used/unexpected-capability-used.yaml
+++ b/pkg/rules/r0004-unexpected-capability-used/unexpected-capability-used.yaml
@@ -20,6 +20,9 @@ spec:
       profileDependency: 0
       severity: 1
       supportPolicy: false
+      isTriggerAlert: false
+      mitreTactic: "TA0002"
+      mitreTechnique: "T1059"
       tags:
         - "anomaly"
         - "capabilities"
