--- a/pkg/rules/r0005-unexpected-domain-request/unexpected-domain-request.yaml
+++ b/pkg/rules/r0005-unexpected-domain-request/unexpected-domain-request.yaml
@@ -20,6 +20,9 @@ spec:
       profileDependency: 0
       severity: 1
       supportPolicy: false
+      isTriggerAlert: false
+      mitreTactic: "TA0011"
+      mitreTechnique: "T1071.004"
       tags:
         - "dns"
         - "anomaly"
