--- a/pkg/rules/r0006-unexpected-service-account-token-access/unexpected-service-account-token-access.yaml
+++ b/pkg/rules/r0006-unexpected-service-account-token-access/unexpected-service-account-token-access.yaml
@@ -28,6 +28,9 @@ spec:
       profileDependency: 1
       severity: 5
       supportPolicy: false
+      isTriggerAlert: true
+      mitreTactic: "TA0006"
+      mitreTechnique: "T1528"
       tags:
         - "anomaly"
         - "serviceaccount"
