--- a/pkg/rules/r0009-ebpf-program-load/ebpf-program-load.yaml
+++ b/pkg/rules/r0009-ebpf-program-load/ebpf-program-load.yaml
@@ -20,6 +20,9 @@ spec:
       profileDependency: 1
       severity: 5
       supportPolicy: false
+      isTriggerAlert: true
+      mitreTactic: "TA0005"
+      mitreTechnique: "T1218"
       tags:
         - "bpf"
         - "ebpf"
