--- a/pkg/rules/r1000-exec-from-malicious-source/exec-from-malicious-source.yaml
+++ b/pkg/rules/r1000-exec-from-malicious-source/exec-from-malicious-source.yaml
@@ -23,6 +23,9 @@ spec:
       profileDependency: 2
       severity: 8
       supportPolicy: false
+      isTriggerAlert: true
+      mitreTactic: "TA0002"
+      mitreTechnique: "T1059"
       tags:
         - "exec"
         - "signature"
