--- a/pkg/rules/r1009-crypto-mining-related-port/crypto-mining-related-port.yaml
+++ b/pkg/rules/r1009-crypto-mining-related-port/crypto-mining-related-port.yaml
@@ -20,6 +20,9 @@ spec:
       profileDependency: 1
       severity: 3
       supportPolicy: false
+      isTriggerAlert: false
+      mitreTactic: "TA0011"
+      mitreTechnique: "T1071"
       tags:
         - "network"
         - "crypto"
