--- a/pkg/rules/r1010-symlink-created-over-sensitive-file/symlink-created-over-sensitive-file.yaml
+++ b/pkg/rules/r1010-symlink-created-over-sensitive-file/symlink-created-over-sensitive-file.yaml
@@ -20,6 +20,9 @@ spec:
       profileDependency: 1
       severity: 5
       supportPolicy: true
+      isTriggerAlert: true
+      mitreTactic: "TA0006"
+      mitreTechnique: "T1005"
       tags:
         - "anomaly"
         - "symlink"
