--- a/pkg/rules/r0002-unexpected-file-access/unexpected-file-access.yaml
+++ b/pkg/rules/r0002-unexpected-file-access/unexpected-file-access.yaml
@@ -38,6 +38,9 @@ spec:
       profileDependency: 0
       severity: 1
       supportPolicy: false
+      isTriggerAlert: false
+      mitreTactic: "TA0009"
+      mitreTechnique: "T1005"
       tags:
         - "anomaly"
         - "file"
