--- a/pkg/rules/r0010-unexpected-sensitive-file-access/unexpected-sensitive-file-access.yaml
+++ b/pkg/rules/r0010-unexpected-sensitive-file-access/unexpected-sensitive-file-access.yaml
@@ -20,6 +20,9 @@ spec:
       profileDependency: 1
       severity: 5
       supportPolicy: false
+      isTriggerAlert: true
+      mitreTactic: "TA0006"
+      mitreTechnique: "T1005"
       tags:
         - "files"
         - "anomaly"
