--- a/pkg/rules/r1005-fileless-execution/fileless-execution.yaml
+++ b/pkg/rules/r1005-fileless-execution/fileless-execution.yaml
@@ -20,6 +20,9 @@ spec:
       profileDependency: 2
       severity: 8
       supportPolicy: false
+      isTriggerAlert: true
+      mitreTactic: "TA0005"
+      mitreTechnique: "T1055"
       tags:
         - "fileless"
         - "execution"
