--- a/pkg/rules/r1006-unshare-syscall/unshare-syscall.yaml
+++ b/pkg/rules/r1006-unshare-syscall/unshare-syscall.yaml
@@ -20,6 +20,9 @@ spec:
       profileDependency: 2
       severity: 5
       supportPolicy: false
+      isTriggerAlert: true
+      mitreTactic: "TA0004"
+      mitreTechnique: "T1611"
       tags:
         - "unshare"
         - "escape"
