Reducing false positives
Signed-off-by: Amit Schendel <amitschendel@gmail.com>

--- a/pkg/rules/r0006-unexpected-service-account-token-access/unexpected-service-account-token-access.yaml
+++ b/pkg/rules/r0006-unexpected-service-account-token-access/unexpected-service-account-token-access.yaml
@@ -21,11 +21,8 @@ spec:
                (event.path.startsWith('/var/run/secrets/kubernetes.io/serviceaccount') && event.path.endsWith('/token')) ||
                (event.path.startsWith('/run/secrets/eks.amazonaws.com/serviceaccount') && event.path.endsWith('/token')) ||
                (event.path.startsWith('/var/run/secrets/eks.amazonaws.com/serviceaccount') && event.path.endsWith('/token'))) &&
-              !ap.was_path_opened_with_prefix(event.containerId, '/run/secrets/kubernetes.io/serviceaccount') &&
-              !ap.was_path_opened_with_prefix(event.containerId, '/var/run/secrets/kubernetes.io/serviceaccount') &&
-              !ap.was_path_opened_with_prefix(event.containerId, '/run/secrets/eks.amazonaws.com/serviceaccount') &&
-              !ap.was_path_opened_with_prefix(event.containerId, '/var/run/secrets/eks.amazonaws.com/serviceaccount')
-      profileDependency: 1
+              !ap.was_path_opened_with_suffix(event.containerId, '/token')
+      profileDependency: 0
       severity: 5
       supportPolicy: false
       isTriggerAlert: true
