--- a/rules-crd.yaml
+++ b/rules-crd.yaml
@@ -143,11 +143,8 @@ spec:
                  (event.path.startsWith('/var/run/secrets/kubernetes.io/serviceaccount') && event.path.endsWith('/token')) ||
                  (event.path.startsWith('/run/secrets/eks.amazonaws.com/serviceaccount') && event.path.endsWith('/token')) ||
                  (event.path.startsWith('/var/run/secrets/eks.amazonaws.com/serviceaccount') && event.path.endsWith('/token'))) &&
-                !ap.was_path_opened_with_prefix(event.containerId, '/run/secrets/kubernetes.io/serviceaccount') &&
-                !ap.was_path_opened_with_prefix(event.containerId, '/var/run/secrets/kubernetes.io/serviceaccount') &&
-                !ap.was_path_opened_with_prefix(event.containerId, '/run/secrets/eks.amazonaws.com/serviceaccount') &&
-                !ap.was_path_opened_with_prefix(event.containerId, '/var/run/secrets/eks.amazonaws.com/serviceaccount')
-        profileDependency: 1
+                !ap.was_path_opened_with_suffix(event.containerId, '/token')
+        profileDependency: 0
         severity: 5
         supportPolicy: false
         isTriggerAlert: true
@@ -362,7 +359,7 @@ spec:
         description: "Detecting exec calls from mounted paths."
         expressions:
           message: "'Process (' + event.comm + ') was executed from a mounted path'"
-          uniqueId: "event.comm + '_' + event.exepath + '_'"
+          uniqueId: "event.comm"
           ruleExpression:
             - eventType: "exec"
               expression: "!ap.was_executed(event.containerId, parse.get_exec_path(event.args, event.comm)) && k8s.get_container_mount_paths(event.namespace, event.podName, event.containerName).exists(mount, event.exepath.startsWith(mount) || parse.get_exec_path(event.args, event.comm).startsWith(mount))"
